[package]
name = "pokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chat"
path = "src/chat/bin/main.rs"

[dependencies]
futures = "0.3.29"
tokio = { version = "1.33.0", features = ["full", "tracing"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "std", "env-filter"] }
