[package]
name = "pokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chat"
path = "src/chat/bin/main.rs"

[[bin]]
name = "connect"
path = "src/connect/bin/main.rs"

[[bin]]
name = "custom-executor"
path = "src/custom-executor/bin/main.rs"

[dependencies]
bytes = "1.5.0"
futures = "0.3.29"
tokio = { version = "1.33.0", features = ["full", "tracing", "rt"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["codec", "rt"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "std", "env-filter"] }
